Avanços no design do projeto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class= "grid">
         <header>Jojo</header>
-        <main></main>
+        <main>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem dolorem itaque odit dicta! At labore ipsam consectetur, provident omnis, dolore, qui excepturi voluptatum iusto in molestiae repudiandae. Vitae, aut!</main>
         <aside clas= "sidebar">oi</aside>
         <footer></footer>
     </div>
